tests/cli/snapshots/cli_spec__test__generator_spec__tests__cli__fixtures__generator__gen_deezer.md.snap
---
source: tests/cli/gen.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Album {
  data: [GEN__177]
  total: Int
}

type Artist {
  data: [GEN__179]
  total: Int
}

type Chart {
  albums: Album
  artists: Artist
  playlists: GEN__192
  podcasts: Podcast
  tracks: GEN__166
}

type Contributor {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  role: String
  share: String
  tracklist: String
  type: String
}

type Creator {
  id: Int
  name: String
  tracklist: String
  type: String
}

type Datum {
  album: GEN__43
  artist: GEN__42
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  id: Int
  isrc: String
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  time_add: Int
  title: String
  title_short: String
  title_version: String
  type: String
}

type Editorial {
  data: [GEN__196]
  total: Int
}

type GEN__165 {
  album: GEN__M2
  artist: GEN__M3
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  id: Int
  link: String
  md5_image: String
  position: Int
  preview: String
  rank: Int
  title: String
  title_short: String
  title_version: String
  type: String
}

type GEN__166 {
  data: [GEN__165]
  total: Int
}

type GEN__177 {
  artist: GEN__M3
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  explicit_lyrics: Boolean
  id: Int
  link: String
  md5_image: String
  position: Int
  record_type: String
  title: String
  tracklist: String
  type: String
}

type GEN__179 {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  position: Int
  radio: Boolean
  tracklist: String
  type: String
}

type GEN__191 {
  add_date: String
  checksum: String
  creation_date: String
  id: Int
  link: String
  md5_image: String
  mod_date: String
  nb_tracks: Int
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_type: String
  picture_xl: String
  public: Boolean
  title: String
  tracklist: String
  type: String
  user: Creator
}

type GEN__192 {
  data: [GEN__191]
  total: Int
}

type GEN__193 {
  available: Boolean
  description: String
  fans: Int
  id: Int
  link: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  share: String
  title: String
  type: String
}

type GEN__196 {
  id: Int
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  type: String
}

type GEN__199 {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  tracklist: String
  type: String
}

type GEN__2 {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  share: String
  tracklist: String
  type: String
}

type GEN__249 {
  album: GEN__M2
  artist: GEN__199
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  id: Int
  isrc: String
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  title: String
  title_short: String
  title_version: String
  type: String
}

type GEN__3 {
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  id: Int
  link: String
  md5_image: String
  release_date: String
  title: String
  tracklist: String
  type: String
}

type GEN__37 {
  album: GEN__M2
  artist: Creator
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  id: Int
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  title: String
  title_short: String
  title_version: String
  type: String
}

type GEN__38 {
  data: [GEN__37]
}

type GEN__39 {
  artist: GEN__8
  available: Boolean
  contributors: [Contributor]
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  fans: Int
  genre_id: Int
  genres: Genre
  id: Int
  label: String
  link: String
  md5_image: String
  nb_tracks: Int
  record_type: String
  release_date: String
  share: String
  title: String
  tracklist: String
  tracks: GEN__38
  type: String
  upc: String
}

type GEN__4 {
  album: GEN__3
  artist: GEN__2
  available_countries: [String]
  bpm: Int
  contributors: [Contributor]
  disk_number: Int
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  gain: Int
  id: Int
  isrc: String
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  release_date: String
  share: String
  title: String
  title_short: String
  title_version: String
  track_position: Int
  track_token: String
  type: String
}

type GEN__40 {
  id: Int
  link: String
  name: String
  nb_album: Int
  nb_fan: Int
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  share: String
  tracklist: String
  type: String
}

type GEN__42 {
  id: Int
  link: String
  name: String
  tracklist: String
  type: String
}

type GEN__43 {
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  id: Int
  md5_image: String
  title: String
  tracklist: String
  type: String
  upc: String
}

type GEN__5 {
  id: Int
  name: String
  picture: String
  type: String
}

type GEN__8 {
  id: Int
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  tracklist: String
  type: String
}

type GEN__M2 {
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  id: Int
  md5_image: String
  title: String
  tracklist: String
  type: String
}

type GEN__M3 {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  tracklist: String
  type: String
}

type Genre {
  data: [GEN__5]
}

type Playlist {
  add_date: String
  checksum: String
  collaborative: Boolean
  creation_date: String
  creator: Creator
  description: String
  duration: Int
  fans: Int
  id: Int
  is_loved_track: Boolean
  link: String
  md5_image: String
  mod_date: String
  nb_tracks: Int
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_type: String
  picture_xl: String
  public: Boolean
  share: String
  title: String
  tracklist: String
  tracks: Track
  type: String
}

type Podcast {
  data: [GEN__193]
  total: Int
}

type Query {
  album(GEN__1: Int!): GEN__39 @http(url: "https://api.deezer.com/album/{{.args.GEN__1}}")
  artist(GEN__1: Int!): GEN__40 @http(url: "https://api.deezer.com/artist/{{.args.GEN__1}}")
  chart: Chart @http(url: "https://api.deezer.com/chart")
  editorial: Editorial @http(url: "https://api.deezer.com/editorial")
  playlist(GEN__1: Int!): Playlist @http(url: "https://api.deezer.com/playlist/{{.args.GEN__1}}")
  search(q: String): Search @http(url: "https://api.deezer.com/search", query: [{key: "q", value: "{{.args.q}}"}])
  track(GEN__1: Int!): GEN__4 @http(url: "https://api.deezer.com/track/{{.args.GEN__1}}")
  user(GEN__1: Int!): User @http(url: "https://api.deezer.com/user/{{.args.GEN__1}}")
}

type Search {
  data: [GEN__249]
  next: String
  total: Int
}

type Track {
  checksum: String
  data: [Datum]
}

type User {
  country: String
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  tracklist: String
  type: String
}
